--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@ckeditor/ckeditor5-build-classic": "^35.4.0",
         "@fortawesome/fontawesome-free": "^6.2.1",
         "daisyui": "^2.50.0",
+        "datatables.net-dt": "^1.13.4",
         "flowbite": "^1.6.0",
         "mdb-ui-kit": "^6.1.0",
         "preline": "^1.6.0",
