--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "persgeek/binance": "dev-main",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.7",
+        "stevebauman/location": "^6.6",
         "wisdom-diala/cryptocap-pkg": "dev-main"
     },
     "require-dev": {
