--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bacon/bacon-qr-code": "^2.0",
         "cviebrock/eloquent-sluggable": "^9.0",
         "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
@@ -16,6 +17,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "persgeek/binance": "dev-main",
+        "pragmarx/google2fa-laravel": "^2.1",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.7",
         "stevebauman/location": "^6.6",
